fixing the installable script to allocate more permgen space